<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutPopup"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bglogin"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MenuActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtHi"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:layout_marginBottom="100dp"
        android:textSize="30sp"/>
    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/btnChooseTable"
        android:textSize="20sp"
        android:onClick="SelectTable"
        />
    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/btnInputData"
        android:textSize="20sp"
        android:onClick="AddUser"
        />
    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/btnPay"
        android:textSize="20sp"
        android:onClick="Payment"
        />
</LinearLayout>